# graphs_view

./: graphs_view.py  graphs_view.sh  pyproject.toml  readme.md  requirements.txt
src/graphs_view/: __init__.py  __main__.py  console_frame.py  main.py  parameters_frame.py  settings.py  settings_frame.py
tests/: test.ipynb  test_udp.ipynb
